--- a/RC-Frogger/RC-Frogger.vcxproj
+++ b/RC-Frogger/RC-Frogger.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="Emitters.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="FontHolder.cpp" />
+    <ClCompile Include="Frog.cpp" />
     <ClCompile Include="GameOverState.cpp" />
     <ClCompile Include="GameState.cpp" />
     <ClCompile Include="GexState.cpp" />
@@ -165,6 +166,7 @@
     <ClInclude Include="Emitters.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="FontHolder.h" />
+    <ClInclude Include="Frog.h" />
     <ClInclude Include="GameOverState.h" />
     <ClInclude Include="GameState.h" />
     <ClInclude Include="GexState.h" />
