--- a/RC-Frogger/RC-Frogger.vcxproj
+++ b/RC-Frogger/RC-Frogger.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="Airplane.cpp" />
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="Cars.cpp" />
     <ClCompile Include="Command.cpp" />
     <ClCompile Include="CommandQueue.cpp" />
     <ClCompile Include="DataTables.cpp" />
@@ -163,6 +164,7 @@
     <ClInclude Include="Airplane.h" />
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Application.h" />
+    <ClInclude Include="Cars.h" />
     <ClInclude Include="Category.h" />
     <ClInclude Include="Command.h" />
     <ClInclude Include="CommandQueue.h" />
