--- a/RC-Frogger/RC-Frogger.vcxproj
+++ b/RC-Frogger/RC-Frogger.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="GameOverState.cpp" />
     <ClCompile Include="GameState.cpp" />
     <ClCompile Include="GexState.cpp" />
+    <ClCompile Include="Logs.cpp" />
     <ClCompile Include="MenuState.cpp" />
     <ClCompile Include="MusicPlayer.cpp" />
     <ClCompile Include="ParticleNode.cpp" />
@@ -176,6 +177,7 @@
     <ClInclude Include="GameOverState.h" />
     <ClInclude Include="GameState.h" />
     <ClInclude Include="GexState.h" />
+    <ClInclude Include="Logs.h" />
     <ClInclude Include="MenuState.h" />
     <ClInclude Include="MusicPlayer.h" />
     <ClInclude Include="Particle.h" />
