--- a/RC-Frogger/RC-Frogger.vcxproj.filters
+++ b/RC-Frogger/RC-Frogger.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClCompile Include="Logs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Turtles.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Airplane.h">
@@ -234,6 +237,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Logs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Turtles.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
